force-app/main/default/objects/Office_Zip_Code_Map__c/Office_Zip_Code_Map__c.object-meta.xml
<CustomObject>
    <description>Maps zip codes to office locations. Used for assigning records to offices based on zip codes</description>
    <label>Office-Zip Code Map</label>
    <nameField>
        <displayFormat>Map-{00000}</displayFormat>
        <label>Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Office-Zip Code Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>