force-app/main/default/objects/Office_Zip_Code_Map__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>the zip code assigned to the office</description>
    <label>Zip Code</label>
    <referenceTo>Zip_Code__c</referenceTo>
    <relationshipLabel>Office-Zip Code Maps</relationshipLabel>
    <relationshipName>Office_Zip_Code_Maps</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>