force-app/main/default/objects/Office_Zip_Code_Map__c/listViews/RCI_Maps.listView-meta.xml
<ListView>
    <fullName>RCI_Maps</fullName>
    <columns>Office__c</columns>
    <columns>NAME</columns>
    <columns>Zip_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office__c</field>
        <operation>contains</operation>
        <value>RCI</value>
    </filters>
    <label>RCI Maps</label>
</ListView>